@@ -3,5 +3,12 @@ Hello, this is the change log to uh describe details.
 
 Current date: 5/18/2022
 
-    Changed speeds for People.java.
-    'Entity.Java had it's hitbox creator +2' on all sides so it isn't so cut into the pictures when the collide
+    Changed speeds 0-20 for People.java.
+    'Entity.Java had it's hitbox creator +2' on all sides so it isn't so cut into the pictures when the collide.
+    In Game.java actually checked if people obj collided with player obj.
+    In Game.java when you press escape it freezes the game and shows hitboxes.
+    In CollsionDetect.java fixed a problem where the hitboxes were only being updated to their original positions
+        when they collide.
+
+    Kind of need a timer to fix the problem that people.java is moving too much, thus colliding to far into the player  
+        and getting stuck.
